src/main/java/samples/stg/CMinusParser.java
// $ANTLR 3.5.2 E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\stg\\CMinus.g 2014-04-27 13:24:16

package samples.stg;
import org.antlr.stringtemplate.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.stringtemplate.*;
import org.antlr.stringtemplate.language.*;
import java.util.HashMap;
@SuppressWarnings("all")
public class CMinusParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ID", "INT", "WS", "'('", "')'", 
		"'+'", "','", "';'", "'<'", "'='", "'=='", "'char'", "'for'", "'int'", 
		"'{'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__7=7;
	public static final int T__8=8;
	public static final int T__9=9;
	public static final int T__10=10;
	public static final int T__11=11;
	public static final int T__12=12;
	public static final int T__13=13;
	public static final int T__14=14;
	public static final int T__15=15;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int ID=4;
	public static final int INT=5;
	public static final int WS=6;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators

	protected static class slist_scope {
		List locals;
		List stats;
	}
	protected Stack<slist_scope> slist_stack = new Stack<slist_scope>();


	public CMinusParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public CMinusParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected StringTemplateGroup templateLib =
	  new StringTemplateGroup("CMinusParserTemplates", AngleBracketTemplateLexer.class);

	public void setTemplateLib(StringTemplateGroup templateLib) {
	  this.templateLib = templateLib;
	}
	public StringTemplateGroup getTemplateLib() {
	  return templateLib;
	}
	/** allows convenient multi-value initialization:
	 *  "new STAttrMap().put(...).put(...)"
	 */
	@SuppressWarnings("serial")
	public static class STAttrMap extends HashMap<String, Object> {
		public STAttrMap put(String attrName, Object value) {
			super.put(attrName, value);
			return this;
		}
	}
	@Override public String[] getTokenNames() { return CMinusParser.tokenNames; }
	@Override public String getGrammarFileName() { return "E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\stg\\CMinus.g"; }


	protected static class program_scope {
		List globals;
		List functions;
	}
	protected Stack<program_scope> program_stack = new Stack<program_scope>();

	public static class program_return extends ParserRuleReturnScope {
		public StringTemplate st;
		public Object getTemplate() { return st; }
		public String toString() { return st==null?null:st.toString(); }
	};


	// $ANTLR start "program"
	// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\stg\\CMinus.g:26:1: program : ( declaration )+ -> program(globals=$program::globalsfunctions=$program::functions);
	public final program_return program() throws RecognitionException {
		program_stack.push(new program_scope());
		program_return retval = new program_return();
		retval.start = input.LT(1);


		  program_stack.peek().globals = new ArrayList();
		  program_stack.peek().functions = new ArrayList();

		try {
			// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\stg\\CMinus.g:35:5: ( ( declaration )+ -> program(globals=$program::globalsfunctions=$program::functions))
			// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\stg\\CMinus.g:35:9: ( declaration )+
			{
			// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\stg\\CMinus.g:35:9: ( declaration )+
			int cnt1=0;
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==ID||LA1_0==15||LA1_0==17) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\stg\\CMinus.g:35:9: declaration
					{
					pushFollow(FOLLOW_declaration_in_program58);
					declaration();
					state._fsp--;

					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					EarlyExitException eee = new EarlyExitException(1, input);
					throw eee;
				}
				cnt1++;
			}

			// TEMPLATE REWRITE
			// 36:9: -> program(globals=$program::globalsfunctions=$program::functions)
			{
				retval.st = templateLib.getInstanceOf("program",new STAttrMap().put("globals", program_stack.peek().globals).put("functions", program_stack.peek().functions));
			}



			}

			retval.stop = input.LT(-1);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			program_stack.pop();
		}
		return retval;
	}
	// $ANTLR end "program"


	public static class declaration_return extends ParserRuleReturnScope {
		public StringTemplate st;
		public Object getTemplate() { return st; }
		public String toString() { return st==null?null:st.toString(); }
	};


	// $ANTLR start "declaration"
	// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\stg\\CMinus.g:39:1: declaration : ( variable |f= function );
	public final declaration_return declaration() throws RecognitionException {
		declaration_return retval = new declaration_return();
		retval.start = input.LT(1);

		ParserRuleReturnScope f =null;
		ParserRuleReturnScope variable1 =null;

		try {
			// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\stg\\CMinus.g:40:5: ( variable |f= function )
			int alt2=2;
			switch ( input.LA(1) ) {
			case 17:
				{
				int LA2_1 = input.LA(2);
				if ( (LA2_1==ID) ) {
					int LA2_4 = input.LA(3);
					if ( (LA2_4==11) ) {
						alt2=1;
					}
					else if ( (LA2_4==7) ) {
						alt2=2;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 2, 4, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case 15:
				{
				int LA2_2 = input.LA(2);
				if ( (LA2_2==ID) ) {
					int LA2_4 = input.LA(3);
					if ( (LA2_4==11) ) {
						alt2=1;
					}
					else if ( (LA2_4==7) ) {
						alt2=2;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 2, 4, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 2, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case ID:
				{
				int LA2_3 = input.LA(2);
				if ( (LA2_3==ID) ) {
					int LA2_4 = input.LA(3);
					if ( (LA2_4==11) ) {
						alt2=1;
					}
					else if ( (LA2_4==7) ) {
						alt2=2;
					}

					else {
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 2, 4, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 3, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}
			switch (alt2) {
				case 1 :
					// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\stg\\CMinus.g:40:9: variable
					{
					pushFollow(FOLLOW_variable_in_declaration99);
					variable1=variable();
					state._fsp--;

					program_stack.peek().globals.add((variable1!=null?((StringTemplate)variable1.getTemplate()):null));
					}
					break;
				case 2 :
					// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\stg\\CMinus.g:41:9: f= function
					{
					pushFollow(FOLLOW_function_in_declaration115);
					f=function();
					state._fsp--;

					program_stack.peek().functions.add((f!=null?((StringTemplate)f.getTemplate()):null));
					}
					break;

			}
			retval.stop = input.LT(-1);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "declaration"


	public static class variable_return extends ParserRuleReturnScope {
		public StringTemplate st;
		public Object getTemplate() { return st; }
		public String toString() { return st==null?null:st.toString(); }
	};


	// $ANTLR start "variable"
	// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\stg\\CMinus.g:47:1: variable : type declarator ';' -> {$function.size()>0 && $function::name==null}? globalVariable(type=$type.stname=$declarator.st) -> variable(type=$type.stname=$declarator.st);
	public final variable_return variable() throws RecognitionException {
		variable_return retval = new variable_return();
		retval.start = input.LT(1);

		ParserRuleReturnScope type2 =null;
		ParserRuleReturnScope declarator3 =null;

		try {
			// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\stg\\CMinus.g:48:5: ( type declarator ';' -> {$function.size()>0 && $function::name==null}? globalVariable(type=$type.stname=$declarator.st) -> variable(type=$type.stname=$declarator.st))
			// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\stg\\CMinus.g:48:9: type declarator ';'
			{
			pushFollow(FOLLOW_type_in_variable139);
			type2=type();
			state._fsp--;

			pushFollow(FOLLOW_declarator_in_variable141);
			declarator3=declarator();
			state._fsp--;

			match(input,11,FOLLOW_11_in_variable143); 
			// TEMPLATE REWRITE
			// 49:9: -> {$function.size()>0 && $function::name==null}? globalVariable(type=$type.stname=$declarator.st)
			if (function_stack.size()>0 && function_stack.peek().name==null) {
				retval.st = templateLib.getInstanceOf("globalVariable",new STAttrMap().put("type", (type2!=null?((StringTemplate)type2.getTemplate()):null)).put("name", (declarator3!=null?((StringTemplate)declarator3.getTemplate()):null)));
			}

			else // 51:9: -> variable(type=$type.stname=$declarator.st)
			{
				retval.st = templateLib.getInstanceOf("variable",new STAttrMap().put("type", (type2!=null?((StringTemplate)type2.getTemplate()):null)).put("name", (declarator3!=null?((StringTemplate)declarator3.getTemplate()):null)));
			}



			}

			retval.stop = input.LT(-1);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "variable"


	public static class declarator_return extends ParserRuleReturnScope {
		public StringTemplate st;
		public Object getTemplate() { return st; }
		public String toString() { return st==null?null:st.toString(); }
	};


	// $ANTLR start "declarator"
	// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\stg\\CMinus.g:54:1: declarator : ID -> {new StringTemplate($ID.text)};
	public final declarator_return declarator() throws RecognitionException {
		declarator_return retval = new declarator_return();
		retval.start = input.LT(1);

		Token ID4=null;

		try {
			// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\stg\\CMinus.g:55:5: ( ID -> {new StringTemplate($ID.text)})
			// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\stg\\CMinus.g:55:9: ID
			{
			ID4=(Token)match(input,ID,FOLLOW_ID_in_declarator217); 
			// TEMPLATE REWRITE
			// 55:12: -> {new StringTemplate($ID.text)}
			{
				retval.st = new StringTemplate((ID4!=null?ID4.getText():null));
			}



			}

			retval.stop = input.LT(-1);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "declarator"


	protected static class function_scope {
		String name;
	}
	protected Stack<function_scope> function_stack = new Stack<function_scope>();

	public static class function_return extends ParserRuleReturnScope {
		public StringTemplate st;
		public Object getTemplate() { return st; }
		public String toString() { return st==null?null:st.toString(); }
	};


	// $ANTLR start "function"
	// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\stg\\CMinus.g:58:1: function : type ID '(' (p+= formalParameter ( ',' p+= formalParameter )* )? ')' block -> function(type=$type.stname=$function::namelocals=$slist::localsstats=$slist::statsargs=$p);
	public final function_return function() throws RecognitionException {
		slist_stack.push(new slist_scope());
		function_stack.push(new function_scope());
		function_return retval = new function_return();
		retval.start = input.LT(1);

		Token ID5=null;
		List<Object> list_p=null;
		ParserRuleReturnScope type6 =null;
		RuleReturnScope p = null;

		  slist_stack.peek().locals = new ArrayList();
		  slist_stack.peek().stats = new ArrayList();

		try {
			// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\stg\\CMinus.g:67:5: ( type ID '(' (p+= formalParameter ( ',' p+= formalParameter )* )? ')' block -> function(type=$type.stname=$function::namelocals=$slist::localsstats=$slist::statsargs=$p))
			// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\stg\\CMinus.g:67:9: type ID '(' (p+= formalParameter ( ',' p+= formalParameter )* )? ')' block
			{
			pushFollow(FOLLOW_type_in_function254);
			type6=type();
			state._fsp--;

			ID5=(Token)match(input,ID,FOLLOW_ID_in_function256); 
			function_stack.peek().name =(ID5!=null?ID5.getText():null);
			match(input,7,FOLLOW_7_in_function268); 
			// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\stg\\CMinus.g:68:13: (p+= formalParameter ( ',' p+= formalParameter )* )?
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==ID||LA4_0==15||LA4_0==17) ) {
				alt4=1;
			}
			switch (alt4) {
				case 1 :
					// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\stg\\CMinus.g:68:15: p+= formalParameter ( ',' p+= formalParameter )*
					{
					pushFollow(FOLLOW_formalParameter_in_function274);
					p=formalParameter();
					state._fsp--;

					if (list_p==null) list_p=new ArrayList<Object>();
					list_p.add(p.getTemplate());
					// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\stg\\CMinus.g:68:34: ( ',' p+= formalParameter )*
					loop3:
					while (true) {
						int alt3=2;
						int LA3_0 = input.LA(1);
						if ( (LA3_0==10) ) {
							alt3=1;
						}

						switch (alt3) {
						case 1 :
							// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\stg\\CMinus.g:68:36: ',' p+= formalParameter
							{
							match(input,10,FOLLOW_10_in_function278); 
							pushFollow(FOLLOW_formalParameter_in_function282);
							p=formalParameter();
							state._fsp--;

							if (list_p==null) list_p=new ArrayList<Object>();
							list_p.add(p.getTemplate());
							}
							break;

						default :
							break loop3;
						}
					}

					}
					break;

			}

			match(input,8,FOLLOW_8_in_function290); 
			pushFollow(FOLLOW_block_in_function300);
			block();
			state._fsp--;

			// TEMPLATE REWRITE
			// 70:9: -> function(type=$type.stname=$function::namelocals=$slist::localsstats=$slist::statsargs=$p)
			{
				retval.st = templateLib.getInstanceOf("function",new STAttrMap().put("type", (type6!=null?((StringTemplate)type6.getTemplate()):null)).put("name", function_stack.peek().name).put("locals", slist_stack.peek().locals).put("stats", slist_stack.peek().stats).put("args", list_p));
			}



			}

			retval.stop = input.LT(-1);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			slist_stack.pop();
			function_stack.pop();
		}
		return retval;
	}
	// $ANTLR end "function"


	public static class formalParameter_return extends ParserRuleReturnScope {
		public StringTemplate st;
		public Object getTemplate() { return st; }
		public String toString() { return st==null?null:st.toString(); }
	};


	// $ANTLR start "formalParameter"
	// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\stg\\CMinus.g:76:1: formalParameter : type declarator -> parameter(type=$type.stname=$declarator.st);
	public final formalParameter_return formalParameter() throws RecognitionException {
		formalParameter_return retval = new formalParameter_return();
		retval.start = input.LT(1);

		ParserRuleReturnScope type7 =null;
		ParserRuleReturnScope declarator8 =null;

		try {
			// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\stg\\CMinus.g:77:5: ( type declarator -> parameter(type=$type.stname=$declarator.st))
			// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\stg\\CMinus.g:77:9: type declarator
			{
			pushFollow(FOLLOW_type_in_formalParameter416);
			type7=type();
			state._fsp--;

			pushFollow(FOLLOW_declarator_in_formalParameter418);
			declarator8=declarator();
			state._fsp--;

			// TEMPLATE REWRITE
			// 78:9: -> parameter(type=$type.stname=$declarator.st)
			{
				retval.st = templateLib.getInstanceOf("parameter",new STAttrMap().put("type", (type7!=null?((StringTemplate)type7.getTemplate()):null)).put("name", (declarator8!=null?((StringTemplate)declarator8.getTemplate()):null)));
			}



			}

			retval.stop = input.LT(-1);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "formalParameter"


	public static class type_return extends ParserRuleReturnScope {
		public StringTemplate st;
		public Object getTemplate() { return st; }
		public String toString() { return st==null?null:st.toString(); }
	};


	// $ANTLR start "type"
	// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\stg\\CMinus.g:81:1: type : ( 'int' -> type_int(| 'char' -> type_char(| ID -> type_user_object(name=$ID.text));
	public final type_return type() throws RecognitionException {
		type_return retval = new type_return();
		retval.start = input.LT(1);

		Token ID9=null;

		try {
			// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\stg\\CMinus.g:82:5: ( 'int' -> type_int(| 'char' -> type_char(| ID -> type_user_object(name=$ID.text))
			int alt5=3;
			switch ( input.LA(1) ) {
			case 17:
				{
				alt5=1;
				}
				break;
			case 15:
				{
				alt5=2;
				}
				break;
			case ID:
				{
				alt5=3;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 5, 0, input);
				throw nvae;
			}
			switch (alt5) {
				case 1 :
					// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\stg\\CMinus.g:82:9: 'int'
					{
					match(input,17,FOLLOW_17_in_type459); 
					// TEMPLATE REWRITE
					// 82:16: -> type_int(
					{
						retval.st = templateLib.getInstanceOf("type_int");
					}



					}
					break;
				case 2 :
					// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\stg\\CMinus.g:83:9: 'char'
					{
					match(input,15,FOLLOW_15_in_type476); 
					// TEMPLATE REWRITE
					// 83:16: -> type_char(
					{
						retval.st = templateLib.getInstanceOf("type_char");
					}



					}
					break;
				case 3 :
					// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\stg\\CMinus.g:84:9: ID
					{
					ID9=(Token)match(input,ID,FOLLOW_ID_in_type492); 
					// TEMPLATE REWRITE
					// 84:16: -> type_user_object(name=$ID.text)
					{
						retval.st = templateLib.getInstanceOf("type_user_object",new STAttrMap().put("name", (ID9!=null?ID9.getText():null)));
					}



					}
					break;

			}
			retval.stop = input.LT(-1);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "type"


	public static class block_return extends ParserRuleReturnScope {
		public StringTemplate st;
		public Object getTemplate() { return st; }
		public String toString() { return st==null?null:st.toString(); }
	};


	// $ANTLR start "block"
	// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\stg\\CMinus.g:87:1: block : '{' ( variable )* ( stat )* '}' ;
	public final block_return block() throws RecognitionException {
		block_return retval = new block_return();
		retval.start = input.LT(1);

		ParserRuleReturnScope variable10 =null;
		ParserRuleReturnScope stat11 =null;

		try {
			// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\stg\\CMinus.g:88:5: ( '{' ( variable )* ( stat )* '}' )
			// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\stg\\CMinus.g:88:8: '{' ( variable )* ( stat )* '}'
			{
			match(input,18,FOLLOW_18_in_block523); 
			// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\stg\\CMinus.g:89:8: ( variable )*
			loop6:
			while (true) {
				int alt6=2;
				int LA6_0 = input.LA(1);
				if ( (LA6_0==ID) ) {
					int LA6_2 = input.LA(2);
					if ( (LA6_2==ID) ) {
						alt6=1;
					}

				}
				else if ( (LA6_0==15||LA6_0==17) ) {
					alt6=1;
				}

				switch (alt6) {
				case 1 :
					// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\stg\\CMinus.g:89:10: variable
					{
					pushFollow(FOLLOW_variable_in_block534);
					variable10=variable();
					state._fsp--;

					slist_stack.peek().locals.add((variable10!=null?((StringTemplate)variable10.getTemplate()):null));
					}
					break;

				default :
					break loop6;
				}
			}

			// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\stg\\CMinus.g:90:8: ( stat )*
			loop7:
			while (true) {
				int alt7=2;
				int LA7_0 = input.LA(1);
				if ( ((LA7_0 >= ID && LA7_0 <= INT)||LA7_0==7||LA7_0==11||LA7_0==16||LA7_0==18) ) {
					alt7=1;
				}

				switch (alt7) {
				case 1 :
					// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\stg\\CMinus.g:90:10: stat
					{
					pushFollow(FOLLOW_stat_in_block550);
					stat11=stat();
					state._fsp--;

					slist_stack.peek().stats.add((stat11!=null?((StringTemplate)stat11.getTemplate()):null));
					}
					break;

				default :
					break loop7;
				}
			}

			match(input,19,FOLLOW_19_in_block563); 
			}

			retval.stop = input.LT(-1);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "block"


	public static class stat_return extends ParserRuleReturnScope {
		public StringTemplate st;
		public Object getTemplate() { return st; }
		public String toString() { return st==null?null:st.toString(); }
	};


	// $ANTLR start "stat"
	// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\stg\\CMinus.g:94:1: stat : ( forStat -> {$forStat.st}| expr ';' -> statement(expr=$expr.st)| block -> statementList(locals=$slist::localsstats=$slist::stats)| assignStat ';' -> {$assignStat.st}| ';' -> {new StringTemplate(\";\")});
	public final stat_return stat() throws RecognitionException {
		slist_stack.push(new slist_scope());

		stat_return retval = new stat_return();
		retval.start = input.LT(1);

		ParserRuleReturnScope forStat12 =null;
		ParserRuleReturnScope expr13 =null;
		ParserRuleReturnScope assignStat14 =null;


		  slist_stack.peek().locals = new ArrayList();
		  slist_stack.peek().stats = new ArrayList();

		try {
			// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\stg\\CMinus.g:100:5: ( forStat -> {$forStat.st}| expr ';' -> statement(expr=$expr.st)| block -> statementList(locals=$slist::localsstats=$slist::stats)| assignStat ';' -> {$assignStat.st}| ';' -> {new StringTemplate(\";\")})
			int alt8=5;
			switch ( input.LA(1) ) {
			case 16:
				{
				alt8=1;
				}
				break;
			case ID:
				{
				int LA8_2 = input.LA(2);
				if ( (LA8_2==13) ) {
					alt8=4;
				}
				else if ( (LA8_2==9||(LA8_2 >= 11 && LA8_2 <= 12)||LA8_2==14) ) {
					alt8=2;
				}

				else {
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 8, 2, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case INT:
			case 7:
				{
				alt8=2;
				}
				break;
			case 18:
				{
				alt8=3;
				}
				break;
			case 11:
				{
				alt8=5;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 8, 0, input);
				throw nvae;
			}
			switch (alt8) {
				case 1 :
					// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\stg\\CMinus.g:100:7: forStat
					{
					pushFollow(FOLLOW_forStat_in_stat590);
					forStat12=forStat();
					state._fsp--;

					// TEMPLATE REWRITE
					// 100:15: -> {$forStat.st}
					{
						retval.st = (forStat12!=null?((StringTemplate)forStat12.getTemplate()):null);
					}



					}
					break;
				case 2 :
					// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\stg\\CMinus.g:101:7: expr ';'
					{
					pushFollow(FOLLOW_expr_in_stat602);
					expr13=expr();
					state._fsp--;

					match(input,11,FOLLOW_11_in_stat604); 
					// TEMPLATE REWRITE
					// 101:16: -> statement(expr=$expr.st)
					{
						retval.st = templateLib.getInstanceOf("statement",new STAttrMap().put("expr", (expr13!=null?((StringTemplate)expr13.getTemplate()):null)));
					}



					}
					break;
				case 3 :
					// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\stg\\CMinus.g:102:7: block
					{
					pushFollow(FOLLOW_block_in_stat621);
					block();
					state._fsp--;

					// TEMPLATE REWRITE
					// 102:13: -> statementList(locals=$slist::localsstats=$slist::stats)
					{
						retval.st = templateLib.getInstanceOf("statementList",new STAttrMap().put("locals", slist_stack.peek().locals).put("stats", slist_stack.peek().stats));
					}



					}
					break;
				case 4 :
					// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\stg\\CMinus.g:103:7: assignStat ';'
					{
					pushFollow(FOLLOW_assignStat_in_stat643);
					assignStat14=assignStat();
					state._fsp--;

					match(input,11,FOLLOW_11_in_stat645); 
					// TEMPLATE REWRITE
					// 103:22: -> {$assignStat.st}
					{
						retval.st = (assignStat14!=null?((StringTemplate)assignStat14.getTemplate()):null);
					}



					}
					break;
				case 5 :
					// E:\\WorkingArea\\ethereumJ\\src\\main\\java\\samples\\stg\\CMinus.g:104:7: ';'
					{
					match(input,11,FOLLOW_11_in_stat657); 
					// TEMPLATE REWRITE
					// 104:11: -> {new StringTemplate(\";\")}
					{
						retval.st = new StringTemplate(";");
					}



					}
					break;

			}
			retval.stop = input.LT(-1);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
			slist_stack.pop();

		}
		return retval;
	}
	// $ANTLR end "stat"

